# my_ros_workspace

./: .gitignore  README.md  ROS_BIBLE.txt  debug_notes_boggy.txt  third_party.repos
src/my_robot_bringup/: package.xml
src/my_robot_bringup/config/: costmap.yaml  ekf.yaml  nvblox_params.yaml
src/my_robot_bringup/launch/: my_robot_bringup.launch.py
src/my_robot_bringup/urdf/: robo_cayote.urdf
src/pico_comms/: package.xml  setup.cfg  setup.py
src/pico_comms/pico_comms/: arduino_bridge.py  gps_bridge.py  sensor_pub.py  sensor_sub.py
src/robo_cayote_control/: package.xml  setup.cfg  setup.py
src/robo_cayote_control/config/: mqtt_params.yaml
src/robo_cayote_control/launch/: mqtt_ack.launch.py  ris_go2rtc.launch.py
src/robo_cayote_control/robo_cayote_control/: __init__.py  arduino_motor_driver.py  cayote_rl_brain.py  cayote_rl_brain_v2.py  mission_controller.py  mqtt_ack_node.py  protocol.py  ris_go2rtc_node.py  test_rl_load.py  yolo_processor.py
src/robo_cayote_control/test/: test_protocol.py
